fixed collapse button position issue

--- a/src/assets/css/SMPageLoggedIn.scss
+++ b/src/assets/css/SMPageLoggedIn.scss
@@ -17,12 +17,12 @@
 
 .sider-container_collapse-btn {
     border-radius: 50%;
-    height: 45px;
-    width: 45px;
+    height: 44px;
+    width: 44px;
     background-color: #266494;
     margin-left: 40px;
     justify-content: center;
-    margin-top: 0.6%;
+    margin-top: 10px;
 }
 
 .sider-container_collapse-btn:focus-within {
